# juce_clion

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
